# LinkSentinel

./: .gitignore  .pre-commit-config.yaml  README.md  action.yml  link_validator.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: link-check.yml  test.yml
linksentinel/: __main__.py  link_validator.py
tests/: test_link_validator.py
